fixed links being too wide

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -121,7 +121,6 @@ $bold_font: 'Roboto-Bold', sans-serif;
 
 .staff-info a {
     color: $positive;
-    display: block;
 }
 
 .staff-title {
